INTYG-3834: Pixel-perfekt konsekvens mellan alla delkomponenter.

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvFraga/uvFraga.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvFraga/uvFraga.directive.scss
@@ -2,12 +2,12 @@ uv-fraga {
   display: block;
 
   h3 {
-    padding: 15px;
+    font-size: 16px;
+    padding-top: 30px;
     margin: 0;
   }
 
   .fraga-body {
     background: $mi-intyg-body-bg;
-    padding: 15px;
   }
 }
