--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvDelFraga/uvDelFraga.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvDelFraga/uvDelFraga.directive.scss
@@ -1,8 +1,11 @@
 uv-del-fraga {
   display: block;
 
-  h3 {
-    padding: 15px;
+  h4 {
+    font-size: 14px;
+    padding-top: 15px;
+    margin: 0;
+    color: $text-muted;
   }
 
   .body {
