--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvKategori/uvKategori.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvKategori/uvKategori.directive.scss
@@ -3,16 +3,16 @@ uv-kategori {
   padding-top: 20px;
 
   h2 {
+    font-size: 18px;
     background: $mi-intyg-header-bg;
     color: $mi-intyg-header-color;
     padding: 15px;
     margin: 0;
-
   }
 
   .kategori-body {
     background: $mi-intyg-body-bg;
-    padding: 0 15px 15px 15px;
+    padding: 0 30px 25px 30px;
     box-shadow: 0 3px 5px $mi-box-shadow-color;
   }
 }
