--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvList/uvList.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvList/uvList.directive.scss
@@ -17,18 +17,11 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-uv-boolean-value {
+uv-list {
   display: block;
 
-  h4 {
-    font-size: 14px;
-    padding-top: 15px;
+  ul {
+    padding: 10px 0 0 20px;
     margin: 0;
-    color: #666;
-  }
-
-  .value {
-    display: inline-block;
-    padding-top: 5px;
   }
 }
