--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvSimpleValue/uvSimpleValue.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvSimpleValue/uvSimpleValue.directive.scss
@@ -3,9 +3,13 @@ uv-simple-value {
 
   h4 {
     font-size: 14px;
+    padding-top: 15px;
+    margin: 0;
+    color: #666;
   }
 
   .value {
-    padding-left:15px;
+    display: inline-block;
+    padding-top: 5px;
   }
 }
