--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
@@ -30,7 +30,9 @@
 @import 'components/unified-view/components/uvDelFraga/uvDelFraga.directive.scss';
 @import 'components/unified-view/components/uvFraga/uvFraga.directive.scss';
 @import 'components/unified-view/components/uvKategori/uvKategori.directive.scss';
+@import 'components/unified-view/components/uvList/uvList.directive.scss';
 @import 'components/unified-view/components/uvSimpleValue/uvSimpleValue.directive.scss';
 @import 'components/unified-view/components/uvSkapadAv/uvSkapadAv.directive.scss';
+@import 'components/unified-view/components/uvTable/uvTable.directive.scss';
 @import 'components/unified-view/components/uvTillaggsfragor/uvTillaggsfragor.directive.scss';
 // endinjector
