--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
@@ -24,6 +24,7 @@
 @import 'components/common-intyg-modules.scss';
 @import 'components/latestEvents/latestEvents.directive.scss';
 @import 'components/latestEventsModal/latestEventsModal.directive.scss';
+@import 'components/miCertificateActionButtons/miCertificateActionButtons.directive.scss';
 @import 'components/miCompactCertificateBody/miCompactCertificateBody.directive.scss';
 @import 'components/miCompactCertificateHeader/miCompactCertificateHeader.directive.scss';
 @import 'components/unified-view/components/uvBooleanValue/uvBooleanValue.directive.scss';
