--- a/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/view-cert.html
+++ b/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/view-cert.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="col-xs-12 col-sm-5">
-      <latest-events cert-id="{{cert.id}}" statuses="cert.filteredStatuses"></latest-events>
+      <latest-events cert-id="{{cert.id}}" statuses="certMeta.statuses"></latest-events>
     </div>
   </div>
 
@@ -54,7 +54,7 @@
 
       <mi-compact-certificate-header cert-meta-model="certMeta"></mi-compact-certificate-header>
       <mi-compact-certificate-body cert-meta-model="certMeta"></mi-compact-certificate-body>
-      <uv-render-components config="uvConfig" view-data="viewData"></uv-render-components>
+      <uv-render-components config="uvConfig" view-data="cert"></uv-render-components>
 
 
       <div id="certificate" class="certificate">
