--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvFraga/uvFraga.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvFraga/uvFraga.directive.html
@@ -1,5 +1,6 @@
 <div class="uv-fraga-template">
-  <h3><span dynamic-label key="{{ config.labelKey }}"></span></h3>
+  <h3><span ng-attr-id="{{config.type + '-fraga-label-' + config.labelKey | uvDomIdFilter}}" dynamic-label
+            key="{{ config.labelKey }}"></span></h3>
   <div class="fraga-body">
     <uv-render-components config="config.components" view-data="viewData" />
   </div>
