INTYG-3834: Bättre id'n på komponentrubriker

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvBooleanValue/uvBooleanValue.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvBooleanValue/uvBooleanValue.directive.html
@@ -1,6 +1,6 @@
 <div class="uv-boolean-value-template">
   <div>
-    <h4 ng-if="config.labelKey"><span dynamic-label key="{{ config.labelKey }}"/></h4>
+    <h4 ng-if="config.labelKey"><span ng-attr-id="{{config.type + '-label-' + config.labelKey | uvDomIdFilter}}" dynamic-label key="{{ config.labelKey }}"/></h4>
     <span ng-attr-id="{{config.modelProp | uvDomIdFilter}}" class="value">{{getValue()}}</span>
     <!--span class="text-muted">(value for {{config.modelProp}})</span-->
   </div>
