--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvDelFraga/uvDelFraga.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvDelFraga/uvDelFraga.directive.html
@@ -1,5 +1,5 @@
 <div class="uv-del-fraga-template">
-  <h4 ng-if="config.labelKey"><span ng-attr-id="{{config.type + '-del-fraga-label-' + config.labelKey | uvDomIdFilter}}"
+  <h4 ng-if="config.labelKey"><span ng-attr-id="{{config.type + '-label-' + config.labelKey | uvDomIdFilter}}"
                                     dynamic-label key="{{ config.labelKey }}"></span></h4>
   <div class="body">
     <uv-render-components config="config.components" view-data="viewData" />
