INTYG-3838: Första vändan med ts-bas. Några specialfält återstår.

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
@@ -27,6 +27,7 @@
 @import 'components/miCertificateActionButtons/miCertificateActionButtons.directive.scss';
 @import 'components/miCompactCertificateBody/miCompactCertificateBody.directive.scss';
 @import 'components/miCompactCertificateHeader/miCompactCertificateHeader.directive.scss';
+@import 'components/unified-view/components/uvAlertValue/uvAlertValue.directive.scss';
 @import 'components/unified-view/components/uvBooleanValue/uvBooleanValue.directive.scss';
 @import 'components/unified-view/components/uvDelFraga/uvDelFraga.directive.scss';
 @import 'components/unified-view/components/uvFraga/uvFraga.directive.scss';
