--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/minaintyg/views/view-cert.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/minaintyg/views/view-cert.html
@@ -58,16 +58,15 @@
   <div class="row-fluid">
 
     <!-- Loading spinner: visibility defined by $scope.doneLoading  -->
-    <div ng-hide="doneLoading" style="text-align: center; padding: 20px;">
-      <img src="/img/ajax-loader.gif" style="text-align: center;" />
-      <p style="text-align: center; color: #64ABC0; margin-top: 20px;">
-        <strong>
-          <message key="ts-bas.message.certifits-basloading" />
-        </strong>
-      </p>
-    </div>
+    <div mi-spinner label="ts-bas.message.certificateloading" show-spinner="!doneLoading" show-content="doneLoading">
 
-    <div ng-show="doneLoading">
+      <mi-certificate-action-buttons cert-model="cert" on-send="send(cert)" enable-archive="true" enable-print="true"></mi-certificate-action-buttons>
+
+      <mi-compact-certificate-header cert-meta-model="certMeta"></mi-compact-certificate-header>
+      <mi-compact-certificate-body cert-meta-model="certMeta"></mi-compact-certificate-body>
+      <uv-render-components config="uvConfig" view-data="cert"></uv-render-components>
+
+      <hr>
 
       <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ">
@@ -197,8 +196,7 @@
                     <tr>
                       <td><span message key="ts-bas.label.syn.hogeroga"></span></td>
                       <td><span id="hogerOgautanKorrektion" class="text">{{cert.syn.hogerOga.utanKorrektion | number : 1}}</span></td>
-                      <td><span id="hogerOgamedKorrektion"
-                                class="text">{{cert.syn.hogerOga.medKorrektion | number : 1}}</span></td>
+                      <td><span id="hogerOgamedKorrektion" class="text">{{cert.syn.hogerOga.medKorrektion | number : 1}}</span></td>
                       <td><span id="hogerOgakontaktlins" class="text" message
                                 key="{{cert.syn.hogerOga.kontaktlins | BoolToTextFilter}}"></span></td>
                     </tr>
@@ -602,4 +600,4 @@
       </section>
     </div>
   </div>
-</div>
+</div></div>
