INTYG-3838: Fixed jasmine test for uvAlertValue

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvAlertValue/uvAlertValue.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvAlertValue/uvAlertValue.directive.html
@@ -1,5 +1,5 @@
 <div id="{{config.labelKey}}" class="uv-alert-value-template">
   <div class="alert alert-{{config.alertLevel}}">
-    <span dynamic-label key="{{ config.labelKey }}"></span>
+    <span id="{{config.labelKey}}-text" dynamic-label key="{{ config.labelKey }}"></span>
   </div>
 </div>
