--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
@@ -34,6 +34,7 @@
 @import 'components/unified-view/components/uvKategori/uvKategori.directive.scss';
 @import 'components/unified-view/components/uvKodverkValue/uvKodverkValue.directive.scss';
 @import 'components/unified-view/components/uvList/uvList.directive.scss';
+@import 'components/unified-view/components/uvNoValue/uvNoValue.directive.scss';
 @import 'components/unified-view/components/uvSimpleValue/uvSimpleValue.directive.scss';
 @import 'components/unified-view/components/uvSkapadAv/uvSkapadAv.directive.scss';
 @import 'components/unified-view/components/uvTable/uvTable.directive.scss';
