--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvTable/uvTable.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvTable/uvTable.directive.html
@@ -5,7 +5,7 @@
     </th>
   </tr>
   <tr ng-repeat="row in viewModel.rows track by $index">
-    <td ng-repeat="value in row.valueProps" ng-attr-id="{{viewModel.modelProp + '-row' + $parent.$index + '-col' + $index| uvDomIdFilter}}" class="multiline">
+    <td ng-repeat="value in row.values track by $index" ng-attr-id="{{viewModel.modelProp + '-row' + $parent.$index + '-col' + $index| uvDomIdFilter}}" class="multiline">
       {{value}}
     </td>
   </tr>
