INTYG-3834: Bättre id'n på uv-komponentinstanser (behövs för protractortester). Tagit bort "gamla" intygsvyn för lisjp

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvBooleanValue/uvBooleanValue.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvBooleanValue/uvBooleanValue.directive.html
@@ -2,6 +2,6 @@
   <div>
     <h4 ng-if="config.labelKey"><span ng-attr-id="{{config.type + '-label-' + config.labelKey | uvDomIdFilter}}" dynamic-label key="{{ config.labelKey }}"/></h4>
     <span ng-attr-id="{{config.modelProp | uvDomIdFilter}}" class="value">{{getValue()}}</span>
-    <!--span class="text-muted">(value for {{config.modelProp}})</span-->
+    <!-- uv-boolean-value currently has no support for uv-no-value, since undefined value is displayed as Nej -->
   </div>
 </div>
