INTYG-3934: Rättat typo i text som hittades vid CR

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/views/about/about-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/views/about/about-partial.html
@@ -7,7 +7,7 @@
 <div wc-authority role="PRIVATLAKARE">
   <ul>
     <li>Att du har en e-legitimation.</li>
-    <li>Att du är legitimerad läkare enligt Socialstyrelesens register över legitimerad häslo- och sjukvårdspersonal (HOSP).</li>
+    <li>Att du är legitimerad läkare enligt Socialstyrelsens register över legitimerad hälso- och sjukvårdspersonal (HOSP).</li>
   </ul>
 </div>
 
