INTYG-3835: Visa LUSE uppbyggt enligt ny struktur

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvTable/uvTable.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvTable/uvTable.directive.html
@@ -1,6 +1,6 @@
 <table id="{{viewModel.modelProp | uvDomIdFilter}}" class="table table-striped">
   <tr>
-    <th ng-repeat="header in viewModel.headers">
+    <th ng-repeat="header in viewModel.headers track by $index">
         {{header}}
     </th>
   </tr>
