--- a/fk/luse/src/main/resources/META-INF/resources/webjars/luse/minaintyg/views/error.html
+++ b/fk/luse/src/main/resources/META-INF/resources/webjars/luse/minaintyg/views/error.html
@@ -1,14 +1,11 @@
 <div class="container">
-  <div id="backnav" class="row-fluid">
-    <a class="backlink" href="{{backLink}}"><span message key="luse.button.goback"></span></a>
-  </div>
   <h1>
     <span message key="error.pagetitle"></span>
   </h1>
 
   <div class="row-fluid">
 
-    <div id="errorMessage" class="alert alert-error">
+    <div id="errorMessage" class="alert alert-danger">
       <span message key="luse.error.{{errorCode}}"></span>
     </div>
 
