INTYG-3835: Uppdatering av texter för LUSE

--- a/fk/luse/src/main/resources/META-INF/resources/webjars/luse/minaintyg/views/view-cert.html
+++ b/fk/luse/src/main/resources/META-INF/resources/webjars/luse/minaintyg/views/view-cert.html
@@ -7,15 +7,17 @@
       <h1 ng-focus="pagefocus" tabindex="-1">
         <span id="viewCertificateHeader">Läs och hantera ditt intyg</span>
       </h1>
-      <div>
-        Här är visas hela ditt läkarintyg. Från den här sidan kan du skicka intyget elektroniskt till Försäkringskassan,
-        du kan även spara intyget som en PDF på din dator.
-      </div>
+        <div>
+          Här visas hela ditt läkarintyg. Från den här sidan kan du skicka intyget elektronisk,
+          ladda ned intyget som en PDF och arkivera intyget. För medicinska frågor som rör ditt
+          intyg ska du kontakta den som utfärdade ditt intyg, eller den mottagning du besökte
+          när du fick ditt intyg utfärdat.<br><br>
+          Läs mer om knappfunktioner
+        </div>
 
       <div uib-collapse="!isCollapsed1" class="collapse">
         <span message key="modules.page-header.info.select-recipients-and-send"></span>
         <span message key="modules.page-header.info.download-pdf"></span>
-        <span message key="modules.page-header.info.error"></span>
         <span message key="modules.page-header.info.archive"></span>
       </div>
 
