INTYG-3835: Uppdatering av texter för LUSE forts.

--- a/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/view-cert.html
+++ b/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/view-cert.html
@@ -13,8 +13,8 @@
         enklast
         på <a href="http://www.forsakringskassan.se/sjuk" target="_blank">www.forsakringskassan.se/sjuk</a>. För
         medicinska frågor som rör ditt intyg ska du kontakta den som utfärdade ditt intyg, eller den mottagning du
-        besökte
-        när du fick ditt intyg utfärdat.
+        besökte när du fick ditt intyg utfärdat.<br><br>
+        Läs mer om knappfunktioner
       </div>
 
       <div uib-collapse="!isCollapsed1" class="collapse">
@@ -26,7 +26,7 @@
 
       <button type="button" ng-click="isCollapsed1 = !isCollapsed1" class="btn-link btn-link-link margin-top-5px"
               data-toggle="collapse">
-        <span message key="lisjp.label.status.{{!isCollapsed1}}"></span>
+        <span message key="modules.page-header.info.more.{{!isCollapsed1}}"></span>
       </button>
     </div>
 
