--- a/fk/luse/src/main/resources/META-INF/resources/webjars/luse/minaintyg/views/view-cert.html
+++ b/fk/luse/src/main/resources/META-INF/resources/webjars/luse/minaintyg/views/view-cert.html
@@ -23,7 +23,7 @@
 
       <button type="button" ng-click="isCollapsed1 = !isCollapsed1" class="btn-link btn-link-link margin-top-5px"
               data-toggle="collapse">
-        <span message key="luse.label.status.{{!isCollapsed1}}"></span>
+        <span message key="modules.page-header.info.more.{{!isCollapsed1}}"></span>
       </button>
     </div>
 
