INTYG-4011: Radering av TS-utkast i djupintegration ger ingen bekräftelse (vit skärm)

--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/utkast.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/utkast.html
@@ -26,6 +26,13 @@
 
       <div ui-view="header"></div>
 
+      <!-- Integration deleted message -->
+      <div id="integration-deleted" ng-if="viewState.common.deleted">
+        <div class="alert alert-info banner-margin">
+          Utkastet är raderat och borttaget från Webcert.
+        </div>
+      </div>
+
       <!-- TS-BAS -->
       <div class="edit-form" ng-class="{'collapsed' : viewState.common.collapsedHeader}" wc-size-target>
 
