INTYG-3838: TS-bas komplett.

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvNoValue/uvNoValue.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvNoValue/uvNoValue.directive.html
@@ -1,3 +1,4 @@
 <span>
-  Ej Angivet
+  <span ng-if="text" dynamic-label key="text"></span>
+  <span ng-if="!text" message key="common.notset"></span>
 </span>
