--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvList/uvList.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvList/uvList.directive.html
@@ -1,10 +1,13 @@
 <div ng-attr-id="{{config.modelProp | uvDomIdFilter}}">
-  <ul ng-if="valueList.length > 0" ng-attr-id="{{(config.modelProp + '-list') | uvDomIdFilter}}" class="uv-list-template">
+
+  <span ng-if="config.separator && valueList.length > 0" ng-repeat="value in valueList track by $index" ng-attr-id="{{config.modelProp + '-' + $index | uvDomIdFilter}}">
+    <span dynamic-label key="{{value}}"></span><span ng-if="$index !== valueList.length - 1">{{config.separator}}</span>
+  </span>
+  <ul ng-if="!config.separator && valueList.length > 0" ng-attr-id="{{(config.modelProp + '-list') | uvDomIdFilter}}" class="uv-list-template">
     <li ng-repeat="values in valueList track by $index" ng-attr-id="{{config.modelProp + '-' + $index | uvDomIdFilter}}">
       <span dynamic-label key="{{values}}"></span>
     </li>
   </ul>
 
-  <uv-no-value ng-if="!valueList || valueList.length < 1"></uv-no-value>
+  <uv-no-value ng-if="!valueList || valueList.length < 1" text="config.noValue"></uv-no-value>
 </div>
-
