INTYG-3934: Justering av text i “Om Webcert”

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/inera-webcert.scss
@@ -294,6 +294,9 @@
       font-size: 14px;
       padding: 10px 0 5px;
     }
+    ul {
+      list-style-type: disc !important;
+    }
     li {
       padding-bottom: 6px;
     }
