--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/views/about/about-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/views/about/about-partial.html
@@ -18,7 +18,7 @@
     <li>underskriftskod kopplad till SITHS-kortet som används för att signera intyg (endast läkare)</li>
     <li>kortläsare</li>
     <li>NetiD installerat i datorn</li>
-    <li>rätt behörighet.</li>
+    <li>rätt behörighet</li>
   </ul>
 </div>
 
@@ -71,9 +71,9 @@
     </li>
   </ul>
   <p>
-    Alla användare kan skapa, skriva och spara utkast. Endast läkare och tandläkare kan signera och makulera
-    intyg samt besvara frågor med ämnet "komplettering". Vårdadministratör kan via mejl notifiera läkare om att
-    signera sparade intyg.
+    Alla användare kan skapa, skriva och spara utkast. Endast läkare och tandläkare kan signera, ersätta och makulera
+    intyg samt besvara frågor med ämnet "komplettering". Vårdadministratör kan notifiera läkare om att ett intyg är
+    klart för signering.
   </p>
 </div>
 
