--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvNoValue/uvNoValue.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/unified-view/components/uvNoValue/uvNoValue.directive.html
@@ -1,4 +1,4 @@
 <span>
-  <span ng-if="text" dynamic-label key="text"></span>
+  <span ng-if="text" dynamic-label key="{{text}}"></span>
   <span ng-if="!text" message key="common.notset"></span>
 </span>
