INTYG-3826: Anpassa lisjp pdf utskrift. Ny design och nya direktiv för återanvändning

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/mi-common.scss
@@ -22,6 +22,10 @@
 // Component styles are injected through grunt
 // injector
 @import 'components/common-intyg-modules.scss';
+@import 'components/customize-pdf/miCheckboxSlider.directive.scss';
+@import 'components/customize-pdf/miFishbone.directive.scss';
+@import 'components/customize-pdf/selectableCategoryWrapper.directive.scss';
+@import 'components/customize-pdf/selectableFieldWrapper.directive.scss';
 @import 'components/latestEvents/latestEvents.directive.scss';
 @import 'components/latestEventsModal/latestEventsModal.directive.scss';
 @import 'components/miCertificateActionButtons/miCertificateActionButtons.directive.scss';
