--- a/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/customize-pdf.html
+++ b/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/views/customize-pdf.html
@@ -1,110 +1,12 @@
 <mi-page-head>
-  <mi-breadcrumb enable-links="false"></mi-breadcrumb>
-  <!-- Header -->
-  <div class="row customize-pdf-header">
-    <div class="col-xs-12">
-      <h1 ng-focus="pagefocus" tabindex="-1">
-        <span id="customizeCertificateHeader" message key="lisjp.customize.step.1.pagetitle"></span>
-      </h1>
-      <div class="wizard">
-        <ul class="steps">
-          <li data-target="#step1" class="active"><span message key="lisjp.customize.step.1.fishbone"></span><span
-              class="chevron"></span></li>
-          <li data-target="#step2"><span message key="lisjp.customize.step.2.fishbone"></span><span
-              class="chevron"></span></li>
-        </ul>
-      </div>
-    </div>
-    <div class="col-xs-6 mi-text" message key="lisjp.customize.step.1.pageingress.left"></div>
-    <div class="col-xs-6 mi-text" message key="lisjp.customize.step.1.pageingress.right"></div>
-  </div>
+  <mi-breadcrumb></mi-breadcrumb>
+  <div ui-view="header"></div>
 </mi-page-head>
+
+
 <div class="container">
   <!-- Content -->
-  <div class="row-fluid">
-
-    <div mi-spinner label="lisjp.message.certificateloading" show-spinner="!doneLoading" show-content="doneLoading">
-
-      <div id="certificate" class="certificate customize-pdf-certificate">
-        <span class="hide" id="certId" title="{{cert.id}}"></span>
-        <span class="hide" id="certType" title="{{cert.typ}}"></span>
-
-        <div class="row">
-          <!-- titlebar -->
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="cert">
-              <div class="cert-titlebar">
-                <img class="cert-icon" alt="" ng-src="/web/webjars/lisjp/minaintyg/img/lisjp.png" />
-
-                <div class="row">
-                  <div class="col-xs-6 col-sm-7 col-md-8 col-lg-8">
-                    <h2 class="cert-title">
-                      <span>{{moduleService.getModuleName(cert.typ)}}</span>
-                    </h2>
-                  </div>
-                  <div class="col-xs-6 col-sm-5 col-md-4 col-lg-4 issue text-right">
-                  <span class="cert-titlebar-value">
-                    <span message key="lisjp.label.issued"></span>
-                  </span>
-                    <span class="cert-titlebar-value">{{cert.grundData.signeringsdatum | date:'shortDate'}}</span>
-                  </div>
-                </div>
-              </div>
-              <!-- header body -->
-              <div class="cert-header">
-                <div class="row">
-                  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 header-row">
-                    <h3 class="tag">
-                      <span message key="lisjp.label.patientname"></span>
-                    </h3>
-                    <span
-                        id="patient-name">{{cert.grundData.patient.fornamn}} {{ cert.grundData.patient.efternamn }}</span><br />
-                    <h3 class="tag">
-                      <span message key="lisjp.label.civicnumber"></span>
-                    </h3>
-                    <span id="patient-crn">{{cert.grundData.patient.personId}}</span>
-                  </div>
-                </div>
-                <div class="row border-bottom-resp">
-                  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 header-row">
-                    <h3 class="tag">
-                      <span message key="lisjp.label.unit"></span>
-                    </h3>
-                    <span id="careunit">{{cert.grundData.skapadAv.vardenhet.enhetsnamn}}</span>
-                  </div>
-                  <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                    <h3 class="tag">
-                      <span message key="lisjp.label.issuer"></span>
-                    </h3>
-                    <span id="caregiver">{{cert.grundData.skapadAv.vardenhet.vardgivare.vardgivarnamn}}</span>
-                  </div>
-                </div>
-              </div>
-
-              <div class="intyg-body">
-                <selectable-field-list cert="cert" field-config="customizeViewstate.getModel()"
-                                       summary="false"></selectable-field-list>
-              </div>
-
-              <!-- footer -->
-              <div>
-                <p>
-                  <button type="button" id="confirmCertificateCustomizationBtn" type="button"
-                          ng-click="confirmCertificateCustomization()" class="btn btn-success">
-                    <span message key="lisjp.customize.step.1.next"></span>
-                  </button>
-                  <button type="button" id="cancelCertificateCustomizationBtn" ng-click="backToViewCertificate()"
-                          class="btn btn-default">
-                    <span message key="lisjp.button.cancel"></span>
-                  </button>
-                </p>
-              </div>
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- eof spinner -->
+  <div mi-spinner label="lisjp.message.certificateloading" show-spinner="!doneLoading" show-content="doneLoading">
+    <div ui-view="body" autoscroll></div>
   </div>
 </div>
