--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/_variables.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/_variables.scss
@@ -1,5 +1,6 @@
 // Since we don't have a way to share variables in MI with common (and don't want a cyclic dependancy) some
 // key mi variables must be re-defined here so that component scss files can use them
+$mi-body-bg: #f3f4f6;
 $mi-spinner-color: #0F6EDC;
 $mi-intyg-body-bg: #fff;
 $mi-box-shadow-color: #ddd;
