INTYG-4034: Fixade ikon på arkivera.

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCertificateActionButtons/miCertificateActionButtons.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCertificateActionButtons/miCertificateActionButtons.directive.html
@@ -33,7 +33,7 @@
               ng-if="enableArchive" ng-click="onArchiveClicked()"
               uib-popover="{{messageService.getProperty('modules.actionbar.button.archive.tooltip')}}"
               popover-trigger="mouseenter" popover-popup-delay="300" popover-append-to-body="true" popover-placement="auto top">
-        <i class="icon icon-pencil"></i> <span message key="modules.actionbar.button.archive"></span>
+        <i class="icon icon-box"></i> <span message key="modules.actionbar.button.archive"></span>
       </button>
 
 
